modificações arquivos html

--- a/semana1/sistema-loja/adicionar-produto.html
+++ b/semana1/sistema-loja/adicionar-produto.html
@@ -23,7 +23,7 @@
      </form>
      <br>
 
-    <a href="página-inicial.html">Home</a>
+    <a href="pagina-inicial.html">Home</a>
 
 </body>
 </html>
