--- a/semana1/sistema-loja/funcionarios.html
+++ b/semana1/sistema-loja/funcionarios.html
@@ -13,7 +13,7 @@
     <li><b>Lennon Ferreira</b> - 13/07/1985</li>
     <li><b>Ludovico Felinácio da Silva</b> - Nascimento indefinido</li>
 </ul>
-<a href="página-inicial.html">Home</a>
+<a href="pagina-inicial.html">Home</a>
 <body>
     
 </body>
