--- a/semana1/sistema-loja/pagina-inicial.html
+++ b/semana1/sistema-loja/pagina-inicial.html
@@ -15,6 +15,6 @@
        <br>
        <a href="adicionar-produto.html">Adicionar produto</a>
        <br>
-       <a href="funcionários.html">Funcionários</a>
+       <a href="funcionarios.html">Funcionários</a>
 </body>
 </html>
