--- a/semana1/sistema-loja/controle-de-estoque.html
+++ b/semana1/sistema-loja/controle-de-estoque.html
@@ -60,7 +60,7 @@
      </tr>  
 </table>
 <br>
-<a href="página-inicial.html">Home</a>
+<a href="pagina-inicial.html">Home</a>
 <body>
     
 </body>
