arquivos css e parte da estilização

--- a/semana1/sistema-loja/pagina-inicial.html
+++ b/semana1/sistema-loja/pagina-inicial.html
@@ -4,17 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="pagina-inicial.css">
 </head>
 <body>
-    <h1>Loja Erva-de-gato</h1>
-    <h2>Bem-vindo à loja Erva-de-Gato!</h2>
-    <p>Nossa loja é especializada em plantas pet-friendly e insumos para jardinagem. 
-       Sempre levamos em conta a segurança do seu amiguinho de 4 patas! </p>
 
+    <div class="header">
+       <img src="imagens/erva-de-gato.png" alt="Erva-de-gato">
+    </div>
+
+    <div class="menu">
        <a href="controle-de-estoque.html">Controle de estoque</a>
        <br>
        <a href="adicionar-produto.html">Adicionar produto</a>
        <br>
        <a href="funcionarios.html">Funcionários</a>
+    </div>
+
+    <div class="conteudo">
+       <h2>Bem-vindo à loja Erva-de-Gato!</h2>
+       <p>Nossa loja é especializada em plantas pet-friendly e insumos para jardinagem. 
+       Sempre levamos em conta a segurança do seu amiguinho de 4 patas! </p>
+
+       <img src="imagens/ilustracao-gato.jpg" alt="Ilustração gato">
+    </div>
+
+    <div class="footer">
+       <p>sac: (xx) xxxx-xxxx</p>
+       <p>email: xxxx@xxxx.com</p>
+    </div>
 </body>
 </html>
