--- a/semana1/sistema-loja/adicionar-produto.html
+++ b/semana1/sistema-loja/adicionar-produto.html
@@ -21,7 +21,7 @@
       <br> <br>
       <input type="text" name="preço" placeholder="Quantidade">
       <br><br>
-      <input type="submit" value="Enviar" name="enviar" id="botao"/>
+      <input type="submit" value="Enviar" name="enviar"/>
      </form>
      <br>
      </div>
