centralizei a tabela usando position

--- a/semana2/bugfixes/comprar.html
+++ b/semana2/bugfixes/comprar.html
@@ -42,8 +42,9 @@
             </tr>
         </table>
     </div>
+    <br>
     <div>
-        <a href="home.html"><button> VOLTAR </button></a>
+        <a href="home.html" id="back-button"><button> VOLTAR </button></a>
     </div>
 </body>
 
