--- a/semana2/labetube/video1.html
+++ b/semana2/labetube/video1.html
@@ -16,7 +16,8 @@
     <article>
         
       <h1>Título do vídeo</h1>
-      <video src="https://storage.googleapis.com/future-apis.appspot.com/1.mp4" controls="controls">Vídeo 1</video>
+      <video src="https://storage.googleapis.com/future-apis.appspot.com/1.mp4"  width="320" height="240"
+      controls="controls">Vídeo 1</video>
          
     </article>
 
